added the github link

--- a/index.html
+++ b/index.html
@@ -96,9 +96,11 @@
 					</div>
 				</div>
 				<hr />
+                <span id="github-link">
+                    <a href="https://github.com/Rita997/vanilla-weather-project" target="_blank"> Open-source code 
+                </a> by Merita Ramadani
+                  </span>
 		</div>
-
     <script src="src/index.js"></script>
   </body>
-  
 </html>
